--- a/package.json
+++ b/package.json
@@ -10,29 +10,40 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "^5.22.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
     "bcryptjs": "^3.0.3",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "9.0.2",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
-    "prisma": "^7.0.0",
+    "prisma": "^5.22.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@radix-ui/react-label": "^2.1.8",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@types/jsonwebtoken": "9.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
